[metadata]
name = github-userlang
version = attr:github_userlang.__version__
author = lnsf
author_email = lnsf03@gmail.com
description = Create pie chart about programming languages the user used
long_description = file:README.md
url = https://github.com/lnsf/github-userlang
license = MIT License
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
    PyGitHub
    matplotlib
entry_points = file:entry_points.cfg